--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.8",
+		"@types/d3-format": "^3.0.1",
+		"@types/d3-scale": "^4.0.3",
+		"@types/d3-shape": "^3.1.1",
+		"@types/d3-time-format": "^4.0.0",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.20",
 		"prettier": "^2.8.0",
@@ -32,7 +36,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@rollup/plugin-dsv": "^3.0.1",
 		"@supabase/supabase-js": "^2.2.3",
+		"d3-shape": "^3.2.0",
+		"d3-time-format": "^4.1.0",
+		"layercake": "^7.2.2",
 		"svelte-multiselect": "^8.2.3"
 	}
 }
