--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.8",
+		"@types/d3": "^7.4.0",
 		"@types/d3-format": "^3.0.1",
 		"@types/d3-scale": "^4.0.3",
 		"@types/d3-shape": "^3.1.1",
@@ -38,6 +39,7 @@
 	"dependencies": {
 		"@rollup/plugin-dsv": "^3.0.1",
 		"@supabase/supabase-js": "^2.2.3",
+		"d3": "^7.8.0",
 		"d3-shape": "^3.2.0",
 		"d3-time-format": "^4.1.0",
 		"layercake": "^7.2.2",
